--- a/index.html
+++ b/index.html
@@ -7,35 +7,16 @@
 
   <body> 
  
-    <h1>Hello world!</h1>
+    <h1>devICE</h1>
 
-    <p>Hello world, my name is Ice</p>
+    <img src="naruto.jpg">
 
-    <h2>Section 1</h2>
-
-    <p>Hello world, my name is Ice!</p>
-  
-    <h3>Section 1.1</h3>
-
-    <p>Hello world, my name is Ice!</p>
-
+    <h2>DEV</h2>
+    Dev stands for all developers who want to become a better version of themselves
     <ul>
-       <li>First item</li>
-       <li>Second item</li>
-       <li>Third item</li>
-   </ul>
-
-   <h3>Section 1.2</h3>
-
-   <p>Here's a numbered list</p>
-
-   <ol>
-      <li>First item</li>
-     <li>Second item</li>
-     <li>Third item</li>
-   </ol>
-
-  <marquee>Hey look at this </marquee>
-
-</body>
+      <li>Learn English</li>
+      <li>Develop a personal brand</li>
+      <li>Receive a dream job-offer</li>
+    </ul>
+  </body>
 <html>
